[workspace]
resolver = "2"
members = [
    "axum-signal",
    "examples/client",
    "examples/contracts",
    "examples/custom_codec",
    "examples/server",
]

[workspace.package]
version = "0.1.3"
edition = "2024"
authors = ["rdcm@protonmail.ch"]
license = "MIT"
readme = "README.md"
keywords = ["axum", "websocket", "broadcast", "realtime", "hub"]
repository = "https://github.com/rdcm/axum-signal"
rust-version = "1.94.0"
description = "SignalR-inspired WebSocket hub abstraction for Axum — broadcast, unicast, JSON/Binary codecs. Passes 10k connections tests."
categories = ["web-programming::websocket", "network-programming"]

[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["multipart", "macros", "ws"] }
axum-signal = { path = "axum-signal", version = "0.1.0" }
contracts = { path = "examples/contracts" }
dashmap = "6.1.0"
futures = "0.3.32"
postcard = { version = "1", features = ["use-std"] }
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
signal-hook = "0.4.3"
signal-hook-tokio = { version = "0.4.0", features = ["futures-v0_3"] }
socket2 = "0.6.3"
tokio = { version = "1.51.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["connect"] }
tokio-util = "0.7.18"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3"
uuid = { version = "1.23.0", features = ["v4", "serde", "fast-rng"] }
