[package]
name = "axum-signal"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
