[package]
name = "axum-signal"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = { workspace = true }
categories = { workspace = true }

[dependencies]
axum = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
