[package]
name = "axum-signal"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = { workspace = true }
categories = { workspace = true }

[features]
client = ["dep:tokio-tungstenite"]

[dependencies]
axum = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true, optional = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }

[[test]]
name = "integration_tests"
required-features = ["client"]

[[test]]
name = "policies_tests"
required-features = ["client"]
