[package]
name = "broadcast"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-signal = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
socket2 = { workspace = true }
tokio = { workspace = true }
