[package]
name = "server"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-signal = { workspace = true }
contracts = { workspace = true }
futures = { workspace = true }
socket2 = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
